# chipper

./: .gitignore  Doxyfile  Taskfile.yml  meson.build
clients/c/: chipper_client.c  chipper_client.h
clients/go/: chipper_client.go  go.mod
clients/python/: chipper_client.py
examples/: a.out  c_example.c  go_example.go  python_example.py
include/: chipper_common.h  chipper_config.h  chipper_daemon.h  chipper_log.h
src/: chipper_common.c  chipper_daemon.c  chipper_log.c  main.c
subprojects/: toml-c.wrap
subprojects/packagefiles/toml-c/: meson.build
